infra/k8s/web-preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-preview
  namespace: proseed-preview
spec:
  ports:
    - port: 3000
  selector:
    app: web-preview
